--- a/src/Components/mainarea/Header/Header.css
+++ b/src/Components/mainarea/Header/Header.css
@@ -1,6 +1,6 @@
 .Header {
     /* border-style: solid; */
-    text-align: center;
-    margin: 3vh;
+    /* text-align: center;
+    margin: 3vh; */
 }
 
