--- a/src/Components/mainarea/Logo/Logo.css
+++ b/src/Components/mainarea/Logo/Logo.css
@@ -1,7 +1,7 @@
 .Logo {
-	text-align: left;
+	/* text-align: left;
     margin-right: 90%;
     margin-left: 0%;
     border-style: dashed;
-    border-radius: 1%;
+    border-radius: 1%; */
 }
