--- a/src/Components/views/mainarea/Footer/Footer.css
+++ b/src/Components/views/mainarea/Footer/Footer.css
@@ -1,14 +1,22 @@
 .Footer {
-    /* position: fixed;
+  /* position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: red;
     color: white;
     text-align: center; */
-    text-align: center;
+  /* text-align: center;
     position:absolute;
     bottom:0;
     width:100%;
-    margin: 5vh;
-  }
+    margin: 5vh; */
+  position: sticky;
+  display: flex;
+  align-items: center;
+  background-color: #eeeeee;
+  padding-top: 1.6%;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
