--- a/src/Components/cards/Coupon/Coupon.css
+++ b/src/Components/cards/Coupon/Coupon.css
@@ -1,3 +1,11 @@
 .Coupon {
-	
+  /* overflow: hidden;
+  background-color: darksalmon; */
+}
+.img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
 }
