--- a/src/Components/cards/Coupon/Coupon.css
+++ b/src/Components/cards/Coupon/Coupon.css
@@ -2,10 +2,10 @@
   /* overflow: hidden;
   background-color: darksalmon; */
 }
-.img {
+/* .img {
   display: block;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 50%;
   width: auto;
-  height: auto;
-}
+  height: 30vh;
+} */
